// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BarChart Component snapshots should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(BarChart)
    data={
      Array [
        Object {
          "name": "Jeans",
          "y": 2600,
        },
        Object {
          "name": "Tops",
          "y": 1900,
        },
        Object {
          "name": "Shirts",
          "y": 1625,
        },
        Object {
          "name": "Cardigans",
          "y": 1475,
        },
        Object {
          "name": "Pull-overs",
          "y": 1000,
        },
        Object {
          "name": "Jackets and tops",
          "y": 800,
        },
        Object {
          "name": "Chino pants",
          "y": 400,
        },
        Object {
          "name": "Ridiculous White Board Fancy Irregular Shorts",
          "y": 200,
        },
      ]
    }
    title="Category mix"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "allowUpdate": false,
      "data": Array [
        Object {
          "name": "Jeans",
          "y": 2600,
        },
        Object {
          "name": "Tops",
          "y": 1900,
        },
        Object {
          "name": "Shirts",
          "y": 1625,
        },
        Object {
          "name": "Cardigans",
          "y": 1475,
        },
        Object {
          "name": "Pull-overs",
          "y": 1000,
        },
        Object {
          "name": "Jackets and tops",
          "y": 800,
        },
        Object {
          "name": "Chino pants",
          "y": 400,
        },
        Object {
          "name": "Ridiculous White Board Fancy Irregular Shorts",
          "y": 200,
        },
      ],
      "orientation": "horizontal",
      "theme": undefined,
      "title": "Category mix",
      "tooltip": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "allowUpdate": false,
        "data": Array [
          Object {
            "name": "Jeans",
            "y": 2600,
          },
          Object {
            "name": "Tops",
            "y": 1900,
          },
          Object {
            "name": "Shirts",
            "y": 1625,
          },
          Object {
            "name": "Cardigans",
            "y": 1475,
          },
          Object {
            "name": "Pull-overs",
            "y": 1000,
          },
          Object {
            "name": "Jackets and tops",
            "y": 800,
          },
          Object {
            "name": "Chino pants",
            "y": 400,
          },
          Object {
            "name": "Ridiculous White Board Fancy Irregular Shorts",
            "y": 200,
          },
        ],
        "orientation": "horizontal",
        "theme": undefined,
        "title": "Category mix",
        "tooltip": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`BarChart Component snapshots should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(BarChart)
    data={
      Array [
        Object {
          "name": "Jeans",
          "y": 2600,
        },
        Object {
          "name": "Tops",
          "y": 1900,
        },
        Object {
          "name": "Shirts",
          "y": 1625,
        },
        Object {
          "name": "Cardigans",
          "y": 1475,
        },
        Object {
          "name": "Pull-overs",
          "y": 1000,
        },
        Object {
          "name": "Jackets and tops",
          "y": 800,
        },
        Object {
          "name": "Chino pants",
          "y": 400,
        },
        Object {
          "name": "Ridiculous White Board Fancy Irregular Shorts",
          "y": 200,
        },
        Object {
          "name": "Hats",
          "y": 100,
        },
        Object {
          "name": "Panamas",
          "y": 90,
        },
        Object {
          "name": "Accessories",
          "y": 80,
        },
        Object {
          "name": "Jewelry",
          "y": 50,
        },
      ]
    }
    title="Category mix"
    tooltip={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "allowUpdate": false,
      "data": Array [
        Object {
          "name": "Jeans",
          "y": 2600,
        },
        Object {
          "name": "Tops",
          "y": 1900,
        },
        Object {
          "name": "Shirts",
          "y": 1625,
        },
        Object {
          "name": "Cardigans",
          "y": 1475,
        },
        Object {
          "name": "Pull-overs",
          "y": 1000,
        },
        Object {
          "name": "Jackets and tops",
          "y": 800,
        },
        Object {
          "name": "Chino pants",
          "y": 400,
        },
        Object {
          "name": "Ridiculous White Board Fancy Irregular Shorts",
          "y": 200,
        },
        Object {
          "name": "Hats",
          "y": 100,
        },
        Object {
          "name": "Panamas",
          "y": 90,
        },
        Object {
          "name": "Accessories",
          "y": 80,
        },
        Object {
          "name": "Jewelry",
          "y": 50,
        },
      ],
      "orientation": "horizontal",
      "theme": undefined,
      "title": "Category mix",
      "tooltip": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "allowUpdate": false,
        "data": Array [
          Object {
            "name": "Jeans",
            "y": 2600,
          },
          Object {
            "name": "Tops",
            "y": 1900,
          },
          Object {
            "name": "Shirts",
            "y": 1625,
          },
          Object {
            "name": "Cardigans",
            "y": 1475,
          },
          Object {
            "name": "Pull-overs",
            "y": 1000,
          },
          Object {
            "name": "Jackets and tops",
            "y": 800,
          },
          Object {
            "name": "Chino pants",
            "y": 400,
          },
          Object {
            "name": "Ridiculous White Board Fancy Irregular Shorts",
            "y": 200,
          },
          Object {
            "name": "Hats",
            "y": 100,
          },
          Object {
            "name": "Panamas",
            "y": 90,
          },
          Object {
            "name": "Accessories",
            "y": 80,
          },
          Object {
            "name": "Jewelry",
            "y": 50,
          },
        ],
        "orientation": "horizontal",
        "theme": undefined,
        "title": "Category mix",
        "tooltip": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`BarChart Component snapshots should match snapshot 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(BarChart)
    data={
      Array [
        Object {
          "name": "€10-",
          "y": 50,
        },
        Object {
          "name": "€10—19.99",
          "y": 90,
        },
        Object {
          "name": "€20—29.99",
          "y": 70,
        },
        Object {
          "name": "€30—39.99",
          "y": 30,
        },
        Object {
          "name": "€40—49.99",
          "y": 104,
        },
        Object {
          "name": "€50—59.99",
          "y": 60,
        },
        Object {
          "name": "€60—69.99",
          "y": 200,
        },
        Object {
          "name": "€70—79.99",
          "y": 176,
        },
        Object {
          "name": "€80—89.99",
          "y": 43,
        },
        Object {
          "name": "€90—99.99",
          "y": 182,
        },
        Object {
          "name": "€100—109.99",
          "y": 90,
        },
        Object {
          "name": "€110—119.99",
          "y": 21,
        },
        Object {
          "name": "€120—129.99",
          "y": 37,
        },
        Object {
          "name": "€130—139.99",
          "y": 23,
        },
        Object {
          "name": "€140—149.99",
          "y": 34,
        },
        Object {
          "name": "€150+",
          "y": 10,
        },
      ]
    }
    orientation="vertical"
    title="Price point"
    tooltip={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "allowUpdate": false,
      "data": Array [
        Object {
          "name": "€10-",
          "y": 50,
        },
        Object {
          "name": "€10—19.99",
          "y": 90,
        },
        Object {
          "name": "€20—29.99",
          "y": 70,
        },
        Object {
          "name": "€30—39.99",
          "y": 30,
        },
        Object {
          "name": "€40—49.99",
          "y": 104,
        },
        Object {
          "name": "€50—59.99",
          "y": 60,
        },
        Object {
          "name": "€60—69.99",
          "y": 200,
        },
        Object {
          "name": "€70—79.99",
          "y": 176,
        },
        Object {
          "name": "€80—89.99",
          "y": 43,
        },
        Object {
          "name": "€90—99.99",
          "y": 182,
        },
        Object {
          "name": "€100—109.99",
          "y": 90,
        },
        Object {
          "name": "€110—119.99",
          "y": 21,
        },
        Object {
          "name": "€120—129.99",
          "y": 37,
        },
        Object {
          "name": "€130—139.99",
          "y": 23,
        },
        Object {
          "name": "€140—149.99",
          "y": 34,
        },
        Object {
          "name": "€150+",
          "y": 10,
        },
      ],
      "orientation": "vertical",
      "theme": undefined,
      "title": "Price point",
      "tooltip": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "allowUpdate": false,
        "data": Array [
          Object {
            "name": "€10-",
            "y": 50,
          },
          Object {
            "name": "€10—19.99",
            "y": 90,
          },
          Object {
            "name": "€20—29.99",
            "y": 70,
          },
          Object {
            "name": "€30—39.99",
            "y": 30,
          },
          Object {
            "name": "€40—49.99",
            "y": 104,
          },
          Object {
            "name": "€50—59.99",
            "y": 60,
          },
          Object {
            "name": "€60—69.99",
            "y": 200,
          },
          Object {
            "name": "€70—79.99",
            "y": 176,
          },
          Object {
            "name": "€80—89.99",
            "y": 43,
          },
          Object {
            "name": "€90—99.99",
            "y": 182,
          },
          Object {
            "name": "€100—109.99",
            "y": 90,
          },
          Object {
            "name": "€110—119.99",
            "y": 21,
          },
          Object {
            "name": "€120—129.99",
            "y": 37,
          },
          Object {
            "name": "€130—139.99",
            "y": 23,
          },
          Object {
            "name": "€140—149.99",
            "y": 34,
          },
          Object {
            "name": "€150+",
            "y": 10,
          },
        ],
        "orientation": "vertical",
        "theme": undefined,
        "title": "Price point",
        "tooltip": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
